correction for readability

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!--Titre-->
         <h1>The Game Of Pong V2</h1>
         <!--Canvas du jeu de pong-->
-        <canvas class="canvas">
-            <p>A ball who rebonds between two rectangles with a great sky and stars</p>
+        <canvas id="canvas">
+            <p>A ball who rebounds between two rectangles with a great sky and stars</p>
         </canvas>
     </body>
 </html>
